# hydrie

./: .ccls  .clangd  .envrc  .gitignore  CMakeLists.txt  README.md  flake.nix  justfile  taskfile.yml
bench/: CMakeLists.txt
examples/: CMakeLists.txt  minimal.cpp
include/: CMakeLists.txt
include/hydrie/: hydrie.hpp
src/: config.hpp  defines.hpp  errorhandling.hpp  hydrie.hpp  mesh.hpp  numflux.hpp  state.hpp
test/: CMakeLists.txt
